@@ -24,6 +24,7 @@ X/Y/2013 ola-0.9.0`
  * Added checks to the RDM tests to flag if non-printable characters are
    returned in any RDM strings - #262.
  * Added support for the P9813 family of SPI pixels.
+ * Show dashes in the CLI DMX monitor if a universe is less than 512 channels.
 
  Bugs:
  * Build fixes for OS X 10.9 - #265.
